# misinfo_metric_tool

./: .env.example  .gitignore  README.md  app.py  misinfo_value.py  requirements.txt  scweet_state.db  scweet_state.db-shm  scweet_state.db-wal  translate.py
ClaimeAI/apps/agent/: .env.example  Dockerfile  README.md  fly.toml  langgraph.json  pyproject.toml
ClaimeAI/apps/agent/claim_extractor/: README.md  __init__.py  agent.py  prompts.py  schemas.py
ClaimeAI/apps/agent/claim_extractor/config/: __init__.py  nodes.py
ClaimeAI/apps/agent/claim_extractor/llm/: __init__.py  config.py
ClaimeAI/apps/agent/claim_extractor/nodes/: __init__.py  decomposition.py  disambiguation.py  selection.py  sentence_splitter.py  validation.py
ClaimeAI/apps/agent/claim_verifier/: README.md  __init__.py  agent.py  prompts.py  schemas.py
ClaimeAI/apps/agent/claim_verifier/config/: __init__.py  nodes.py
ClaimeAI/apps/agent/claim_verifier/llm/: __init__.py  config.py
ClaimeAI/apps/agent/claim_verifier/nodes/: __init__.py  evaluate_evidence.py  generate_search_query.py  retrieve_evidence.py  search_decision.py
ClaimeAI/apps/agent/fact_checker/: README.md  __init__.py  agent.py  schemas.py
ClaimeAI/apps/agent/fact_checker/nodes/: __init__.py  claim_verifier.py  dispatch_claims.py  (+2 more)
ClaimeAI/apps/agent/scripts/: api_key.py  dev.py  run_claim_extractor.py  run_claim_verifier.py  run_fact_checker.py
ClaimeAI/apps/agent/security/: __init__.py  api_keys.py  auth.py
ClaimeAI/apps/agent/utils/: README.md  __init__.py  llm.py  models.py  redis.py  settings.py  text.py
Tone/: tone.py
(+121 files in other folders)
